--- a/Mental_Health_Treatment/Readme
+++ b/Mental_Health_Treatment/Readme
@@ -1,6 +1,6 @@
-The attached code is based on data analysis for a mental health treatment survey results data. 
+The attached code is based on data analysis carried for a mental health treatment survey data. 
 The dataset was picked from Kaggle (https://www.kaggle.com/datasets/osmi/mental-health-in-tech-survey)
-It develops prediction of undergoing mental heath treatment based on vairous factors using three different models :
+It develops prediction of undergoing mental heath treatment based on various factors using three different models (RStudio):
 1. Logistics Regression
 2. CART/Decision tree
 3. Random Forest
